--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js"
@@ -19,7 +20,9 @@
   },
   "homepage": "https://github.com/fakhriddin01/pizza_telegram_bot#readme",
   "dependencies": {
+    "@telegraf/session": "^1.0.1",
     "dotenv": "^16.0.3",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "telegraf": "^4.11.2",
     "uuid": "^9.0.0"
